--- a/src/app/pages/recurring/new/new.page.scss
+++ b/src/app/pages/recurring/new/new.page.scss
@@ -1,30 +1,3 @@
-// ion-range {
-//   --bar-background: #a2d2ff;
-//   --bar-background-active: #bde0fe;
-//   --bar-height: 4px;
-//   --bar-border-radius: 4px;
-//   --knob-background: #ffc8dd;
-//   --knob-size: 30px;
-//   // --pin-background: #ffafcc;
-//   // --pin-color: #fff;
-// }
-
-// ion-range::part(tick) {
-//   background: #a2d2ff;
-//   border-radius: 8px;
-//   height: 1em;
-//   transform: translateY(-0.3em);
-//   width: 4px;
-// }
-
-// ion-range::part(tick-active) {
-//   background: rgb(60, 137, 224);
-//   border-radius: 8px;
-//   height: 1em;
-//   transform: translateY(-0.3em);
-//   width: 4px;
-// }
-
 .input-type-selector{
   margin-bottom: 1em;
   --background: #f0f0f0;
@@ -38,40 +11,13 @@ ion-input.custom-cron-input{
   // letter-spacing: 2px;
 }
 
-// ion-item {
-//   --background: #3880ff;
-//   --background-activated: #3880ff;
-//   --background-activated-opacity: 1;
-//   --background-focused: #3880ff;
-//   --background-focused-opacity: 1;
-//   --background-hover: #3880ff;
-//   --background-hover-opacity: 1;
-//   --border-color: #3880ff;
-//   --border-radius: 8px;
-//   --border-style: solid;
-//   --border-width: 8px;
-//   --color: #ffffff;
-//   --color-activated: #3880ff;
-//   --color-focused: #3880ff;
-//   --color-hover: #3880ff;
-//   --detail-icon-color: #989aa2;
-//   --detail-icon-font-size: 16px;
-//   --detail-icon-opacity: 1;
-//   --highlight-color-focused: #0cd1e8;
-//   --highlight-color-invalid: #f04141;
-//   --highlight-color-valid: #10dc60;
-//   --highlight-height: 32px;
-//   --inner-border-width: 8px;
-//   --inner-box-shadow: 4px 4px;
-//   --inner-padding-bottom: 4px;
-//   --inner-padding-end: 4px;
-//   --inner-padding-start: 4px;
-//   --inner-padding-top: 4px;
-//   --min-height: 24px;
-//   --padding-bottom: 4px;
-//   --padding-end: 4px;
-//   --padding-start: 4px;
-//   --padding-top: 4px;
-//   --ripple-color: #1e1e1e;
-//   --transition: background-color 15ms linear;
-// }
+.create-schedule-button{
+  margin: 3px auto;
+}
+
+#interval-input, #custom-input{
+  margin-top: 0.5em;
+  padding: 12px;
+  border: 1px solid #aaaaaa;
+  border-radius: 12px
+}
