--- a/src/app/pages/recurring/new/new.page.scss
+++ b/src/app/pages/recurring/new/new.page.scss
@@ -1,8 +1,8 @@
-.input-type-selector{
+.item-label-custom{
   margin-bottom: 1em;
-  --background: #f0f0f0;
+  // --background: #f0f0f0;
   ion-label{
-    font-weight: 600;
+    font-weight: 500;
   }
 }
 
