--- a/src/app/pages/recurring/new/new.page.scss
+++ b/src/app/pages/recurring/new/new.page.scss
@@ -19,5 +19,32 @@ ion-input.custom-cron-input{
   margin-top: 0.5em;
   padding: 12px;
   border: 1px solid #aaaaaa;
-  border-radius: 12px
+  border-radius: 4px
+}
+
+div.divider{
+  width: 100%;
+  height: 1px;
+  background-color: #f0f0f0;
+  margin: 0.3em 0 1em;
+}
+
+.radio-items-container{
+  display: flex;
+  justify-content: space-between;
+
+  > ion-item {
+    flex: auto;
+  }
+
+  #spacer {
+    flex: 1;
+  }
+}
+
+.field-header{
+  font-weight: 500;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+  color: black;
 }
