--- a/src/app/pages/schedule/new/new.page.scss
+++ b/src/app/pages/schedule/new/new.page.scss
@@ -9,7 +9,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
