+added: retrieve recurring and stop recurring

--- a/src/app/pages/recurring/new/new.page.html
+++ b/src/app/pages/recurring/new/new.page.html
@@ -50,7 +50,7 @@
           <p class="field-header">Custom cron expression</p>
           <div id="custom-input">
             <ion-item>
-              <ion-input type="text" formControlName="cronString" class="custom-cron-input" placeholder="Enter custom cron expression"></ion-input>
+              <ion-input type="text" formControlName="cronJob" class="custom-cron-input" placeholder="Enter custom cron expression"></ion-input>
             </ion-item>
           </div>
         </div>
