--- a/src/global.scss
+++ b/src/global.scss
@@ -31,3 +31,59 @@ ion-toast.custom-toast{
   margin-top: 3rem;
   --border-radius: 8px;
 }
+
+div.list-container{
+  padding-top: 1em;
+  border: 1.5px solid #c1c1c1;
+  border-radius: 8px;
+}
+
+div.accordion-content{
+  padding: 1em;
+  border-radius: 0 0 8px 8px;
+  margin-bottom: 0.2em;
+  // box-shadow: 3px 6px black;
+
+  p.header{
+    font-weight: 300;
+    font-style: italic;
+    padding-left: 0.2em;
+    opacity: 0.72;
+  }
+}
+
+div.textarea-container{
+  border: 1.5px solid rgba(0, 0, 0, 0.32);
+  border-radius: 4px;
+  padding-left: 0.8em;
+
+  p.message{
+    color: #616161;
+  }
+}
+
+div.divider{
+  height: 0.025em;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-top: -0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+div.selected-chats-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  border-radius: 8px;
+  border: 1.5px solid rgba(0, 0, 0, 0.32);
+  padding: 0.5em;
+
+  div.selected-chat{
+    margin: 0.3em;
+    padding: 0.8em;
+    border-radius: 8px;
+    background-color: rgb(117, 117, 117);
+    color: rgb(255, 255, 255);
+    width: auto;
+  }
+}
