--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,13 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-back-button mode="md" [hidden]="isBackBtnHidden" defaultHref="home" icon="chevron-back"></ion-back-button>
+      <ion-back-button
+        mode="md"
+        [hidden]="isBackBtnHidden"
+        defaultHref="home"
+        icon="chevron-back"
+      ></ion-back-button>
     </ion-buttons>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
