--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,15 +2,21 @@
 
 <ion-content [fullscreen]="true">
   <div class="centered" *ngIf="!isClientReady">
-
-    <ion-button (click)="onConnect()" expand="block" [disabled]="isButtonDisabled">
+    <ion-button
+      (click)="onConnect()"
+      expand="block"
+      [disabled]="isButtonDisabled"
+    >
       <ion-text *ngIf="!isClientLoading">Connect</ion-text>
       <ion-spinner name="crescent" *ngIf="isClientLoading"></ion-spinner>
     </ion-button>
 
     <div *ngIf="isQRCodeReceived">
       <qrcode [qrdata]="clientQRCode"></qrcode>
-      <p>Using Whatsapp, Scan the QRCode above to connect to the WhatScheduler client</p>
+      <p>
+        Using Whatsapp, Scan the QRCode above to connect to the WhatScheduler
+        client
+      </p>
     </div>
 
     <div *ngIf="isClientAuthenticated" class="sync-container">
@@ -21,30 +27,49 @@
 
   <div *ngIf="isClientReady && clientChats.length < 1">
     <div class="centered">
-      <ion-icon class="ready-icon" name="checkmark-circle-outline" color="success"></ion-icon>
+      <ion-icon
+        class="ready-icon"
+        name="checkmark-circle-outline"
+        color="success"
+      ></ion-icon>
       <p>Client Ready! Retrieving chats...</p>
     </div>
     <ion-list lines="none" class="bg-transparent">
       <ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9,0]" color="none">
-          <ion-skeleton-text animated style="width: 100%; height: 2em"></ion-skeleton-text>
+        <ion-skeleton-text
+          animated
+          style="width: 100%; height: 2em"
+        ></ion-skeleton-text>
       </ion-item>
     </ion-list>
   </div>
 
   <ion-list *ngIf="clientChats.length > 0" class="bg-transparent">
     <div class="flex">
-      <ion-list-header style="text-align: center;">
+      <ion-list-header style="text-align: center">
         <h3>Your Chats</h3>
       </ion-list-header>
-      <ion-button size="small" (click)="disconnectClient()" shape="round" color="danger">
+      <ion-button
+        size="small"
+        (click)="disconnectClient()"
+        shape="round"
+        color="danger"
+      >
         <ion-icon slot="icon-only" size="small" name="power-sharp"></ion-icon>
       </ion-button>
     </div>
     <div class="list-container">
-      <ion-item lines="none" (click)="sendToChat(chat.id._serialized)" *ngFor="let chat of clientChats; index as i" class="ion-no-padding chat" color="none" [ngStyle]="{'background-color': chat.isGroup ? '#00000030': ''}">
+      <ion-item
+        lines="none"
+        (click)="sendToChat(chat.id._serialized)"
+        *ngFor="let chat of clientChats; index as i"
+        class="ion-no-padding chat"
+        color="none"
+        [ngStyle]="{'background-color': chat.isGroup ? '#00000030': ''}"
+      >
         <ion-label>
           {{chat.name}}
-          <ion-chip  *ngIf="chat.unreadCount > 0" class="ion-align-self-end">
+          <ion-chip *ngIf="chat.unreadCount > 0" class="ion-align-self-end">
             <ion-label>{{chat.unreadCount}}</ion-label>
           </ion-chip>
         </ion-label>
