--- a/src/app/pages/recurring/new/new.page.html
+++ b/src/app/pages/recurring/new/new.page.html
@@ -7,13 +7,21 @@
     <ion-card-content class="ion-align-items-center">
       <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
         <ion-item class="item-label-custom" fill="outline">
-          <ion-input type="text" placeholder="Enter task name" formControlName="name"></ion-input>
+          <ion-input
+            type="text"
+            placeholder="Enter task name"
+            formControlName="name"
+          ></ion-input>
         </ion-item>
         <div class="divider"></div>
 
         <p class="field-header">Message</p>
         <ion-item class="item-label-custom" fill="outline">
-          <ion-textarea type="text" placeholder="Enter message to be sent" formControlName="message"></ion-textarea>
+          <ion-textarea
+            type="text"
+            placeholder="Enter message to be sent"
+            formControlName="message"
+          ></ion-textarea>
         </ion-item>
 
         <div class="divider"></div>
@@ -22,14 +30,24 @@
         <ion-item class="item-label-custom">
           <ion-label>Select Chats</ion-label>
           <ion-select [multiple]="true" formControlName="chatIDs">
-            <ion-select-option *ngFor="let chat of clientChats" [value]="chat.id._serialized">{{chat.name}}</ion-select-option>
+            <ion-select-option
+              *ngFor="let chat of clientChats"
+              [value]="chat.id._serialized"
+              >{{chat.name}}</ion-select-option
+            >
           </ion-select>
         </ion-item>
 
         <div class="divider"></div>
 
         <p class="field-header">Type</p>
-        <ion-radio-group class="radio-group" name="type" formControlName="type" (ionChange)="changeType($event)" value="interval">
+        <ion-radio-group
+          class="radio-group"
+          name="type"
+          formControlName="type"
+          (ionChange)="changeType($event)"
+          value="interval"
+        >
           <div class="radio-items-container">
             <ion-item fill="outline">
               <ion-radio value="custom"></ion-radio>
@@ -38,7 +56,7 @@
             <div id="spacer"></div>
             <ion-item fill="outline">
               <ion-radio value="interval"></ion-radio>
-              <ion-label style="padding: 0 1em 0 1em;">Interval</ion-label>
+              <ion-label style="padding: 0 1em 0 1em">Interval</ion-label>
             </ion-item>
           </div>
         </ion-radio-group>
@@ -50,7 +68,12 @@
           <p class="field-header">Custom cron expression</p>
           <div id="custom-input">
             <ion-item>
-              <ion-input type="text" formControlName="cronJob" class="custom-cron-input" placeholder="Enter custom cron expression"></ion-input>
+              <ion-input
+                type="text"
+                formControlName="cronJob"
+                class="custom-cron-input"
+                placeholder="Enter custom cron expression"
+              ></ion-input>
             </ion-item>
           </div>
         </div>
@@ -60,7 +83,12 @@
           <p class="field-header">Interval</p>
           <div id="interval-input" formGroupName="interval">
             <ion-item color="none">
-              <ion-select value="hourly" (ionChange)="changeInterval($event)" interface="popover" placeholder="Select interval">
+              <ion-select
+                value="hourly"
+                (ionChange)="changeInterval($event)"
+                interface="popover"
+                placeholder="Select interval"
+              >
                 <ion-select-option value="hourly">Hourly</ion-select-option>
                 <ion-select-option value="daily">Daily</ion-select-option>
                 <ion-select-option value="weekly">Weekly</ion-select-option>
@@ -68,35 +96,88 @@
                 <ion-select-option value="yearly">Yearly</ion-select-option>
               </ion-select>
             </ion-item>
-            <br/>
+            <br />
             <ion-item>
               <ion-label>Minutes</ion-label>
-              <ion-select value="0" formControlName="minute" multiple="true" interface="alert" placeholder="Select minutes">
-                <ion-select-option *ngFor="let minute of minutes" [value]="minute.value">{{minute.display_text}}</ion-select-option>
+              <ion-select
+                value="0"
+                formControlName="minute"
+                multiple="true"
+                interface="alert"
+                placeholder="Select minutes"
+              >
+                <ion-select-option
+                  *ngFor="let minute of minutes"
+                  [value]="minute.value"
+                  >{{minute.display_text}}</ion-select-option
+                >
               </ion-select>
             </ion-item>
-            <ion-item *ngIf="selectedInterval !== 'minute' && selectedInterval !== 'hourly'">
+            <ion-item
+              *ngIf="selectedInterval !== 'minute' && selectedInterval !== 'hourly'"
+            >
               <ion-label>Hours</ion-label>
-              <ion-select value="0" multiple="true" formControlName="hour" interface="alert" placeholder="Select hours">
-                <ion-select-option *ngFor="let hour of hours" [value]="hour.value">{{hour.display_text}}</ion-select-option>
+              <ion-select
+                value="0"
+                multiple="true"
+                formControlName="hour"
+                interface="alert"
+                placeholder="Select hours"
+              >
+                <ion-select-option
+                  *ngFor="let hour of hours"
+                  [value]="hour.value"
+                  >{{hour.display_text}}</ion-select-option
+                >
               </ion-select>
             </ion-item>
             <ion-item *ngIf="selectedInterval === 'weekly'">
               <ion-label>Days-of-week</ion-label>
-              <ion-select value="1" multiple="true"  formControlName="day_of_week" interface="alert" placeholder="Select days of week">
-                <ion-select-option *ngFor="let day of days_of_week" [value]="day.value">{{day.display_text}}</ion-select-option>
+              <ion-select
+                value="1"
+                multiple="true"
+                formControlName="day_of_week"
+                interface="alert"
+                placeholder="Select days of week"
+              >
+                <ion-select-option
+                  *ngFor="let day of days_of_week"
+                  [value]="day.value"
+                  >{{day.display_text}}</ion-select-option
+                >
               </ion-select>
             </ion-item>
-            <ion-item *ngIf="selectedInterval === 'monthly' || selectedInterval === 'yearly'">
+            <ion-item
+              *ngIf="selectedInterval === 'monthly' || selectedInterval === 'yearly'"
+            >
               <ion-label>Days-of-month</ion-label>
-              <ion-select value="1" multiple="true" formControlName="day_of_month" interface="alert" placeholder="Select days of month">
-                <ion-select-option *ngFor="let day of days_of_month" [value]="day.value">{{day.display_text}}</ion-select-option>
+              <ion-select
+                value="1"
+                multiple="true"
+                formControlName="day_of_month"
+                interface="alert"
+                placeholder="Select days of month"
+              >
+                <ion-select-option
+                  *ngFor="let day of days_of_month"
+                  [value]="day.value"
+                  >{{day.display_text}}</ion-select-option
+                >
               </ion-select>
             </ion-item>
             <ion-item *ngIf="selectedInterval === 'yearly'">
               <ion-label>Months</ion-label>
-              <ion-select value="1" multiple="true" formControlName="month" placeholder="Select months">
-                <ion-select-option *ngFor="let month of months" [value]="month.value">{{month.display_text}}</ion-select-option>
+              <ion-select
+                value="1"
+                multiple="true"
+                formControlName="month"
+                placeholder="Select months"
+              >
+                <ion-select-option
+                  *ngFor="let month of months"
+                  [value]="month.value"
+                  >{{month.display_text}}</ion-select-option
+                >
               </ion-select>
             </ion-item>
           </div>
@@ -106,8 +187,19 @@
         <ion-grid>
           <ion-row class="ion-align-items-center">
             <ion-col size="12" class="ion-text-center">
-              <ion-button class="create-schedule-button" block color="primary" type="submit" [disabled]="taskForm.invalid">
-                Create
+              <ion-button
+                class="create-schedule-button"
+                block
+                color="primary"
+                type="submit"
+                [disabled]="taskForm.invalid || isCreating"
+              >
+                <ion-text *ngIf="!isCreating">Create</ion-text>
+                <ion-spinner
+                  *ngIf="isCreating"
+                  name="crescent"
+                  color="light"
+                ></ion-spinner>
               </ion-button>
             </ion-col>
           </ion-row>
