--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'Manrope', sans-serif; //Poppins as default font
   /** primary **/
 	--ion-color-primary: #3880ff;
 	--ion-color-primary-rgb: 56,128,255;
@@ -254,6 +255,3 @@
 	--ion-color-tint: var(--ion-color-accent-tint);
 }
 
-ion-content{
-  --background:linear-gradient(150deg, #8afdf6, #8afdf6 65%,#c7fffb 70%, #8afdf6 );
-}
